--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Twitch.tv Ad Mute",
-  "version": "1.2",
+  "version": "1.3",
   "description": "Automatically mutes Twitch tabs when video ads start playing and unmutes the tab when the video ads stop.",
   "author": "Darrin Johnson",
   "homepage_url": "https://github.com/drj101687/ttv-ad-mute",
@@ -12,6 +12,13 @@
     "*://*.twitch.tv/*"
   ],
   "incognito": "spanning",
+  "content_scripts": [
+    {
+      "matches": ["*://*.twitch.tv/*"],
+      "js": ["content-script.js"]
+    }
+  ],
+
   "background": {
     "scripts": ["background.js"]
   },
