--- a/manifest.json
+++ b/manifest.json
@@ -34,5 +34,11 @@
       "48": "icon.svg",
       "128": "icon.svg"
     }
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{45d2bb29-5d79-4000-8de0-c203f8e05c83}",
+      "strict_min_version": "110.0"
+    }
   }
 }
