Broke the extension partially on the last release. Learned about a few v3 manifest principles and refactored the scripts to adhere to those principles. Needs a bit more testing, but this atleast works for the most part. Need to do session/idle testing. Increased version to v1.5

--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,28 @@
 {
   "manifest_version": 3,
   "name": "Twitch.tv Ad Mute",
-  "version": "1.4",
+  "version": "1.5",
   "description": "Automatically mutes Twitch tabs when video ads start playing and unmutes the tab when the video ads stop.",
   "author": "Darrin Johnson",
   "homepage_url": "https://github.com/drj101687/ttv-ad-mute",
   "permissions": [
-    "activeTab",
     "storage",
+    "activeTab",
     "webRequest",
     "webRequestBlocking",
     "tabs"
   ],
   "incognito": "spanning",
+  "host_permissions": [
+    "*://twitch.tv/*",
+    "*://*.twitch.tv/*"
+  ],
   "content_scripts": [
     {
-      "matches": ["*://*.twitch.tv/*"],
+      "matches": [
+        "*://twitch.tv/*",
+        "*://*.twitch.tv/*"
+      ],
       "js": ["content-script.js"]
     }
   ],
