--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "Twitch.tv Ad Mute",
-  "version": "1.6",
+  "name": "TTV Ad Mute",
+  "version": "1.7",
   "description": "Automatically mutes Twitch tabs when video ads start playing and unmutes the tab when the video ads stop.",
   "author": "Darrin Johnson",
   "homepage_url": "https://github.com/drj101687/ttv-ad-mute",
@@ -24,7 +24,7 @@
     }
   ],
   "background": {
-    "scripts": ["js/background.js"]
+    "service_worker": "js/background.js"
   },
   "icons": {
     "24": "img/icon.svg",
